--- a/containers/edge/pom.xml
+++ b/containers/edge/pom.xml
@@ -9,6 +9,8 @@
 	<properties>
 		<camel.quarkus.version>1.1.0</camel.quarkus.version>
 		<quarkus.version>1.8.0.Final</quarkus.version>
+                <maven.compiler.source>1.6</maven.compiler.source>
+                <maven.compiler.target>1.6</maven.compiler.target>
 	</properties>
 
 	<dependencyManagement>
