--- a/containers/edge/pom.xml
+++ b/containers/edge/pom.xml
@@ -40,7 +40,6 @@
 			<artifactId>camel-quarkus-log</artifactId>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.apache.camel.quarkus</groupId>
 			<artifactId>camel-quarkus-http</artifactId>
@@ -60,6 +59,11 @@
 			<groupId>org.apache.camel.quarkus</groupId>
 			<artifactId>camel-quarkus-direct</artifactId>
 		</dependency>
+
+                <dependency>
+                        <groupId>org.apache.camel.quarkus</groupId>
+                        <artifactId>camel-quarkus-bean</artifactId>
+                </dependency>
 	</dependencies>
 
 	<build>
