Change encoding; add TimeZoneNames bundle at build-time

--- a/containers/edge/src/main/resources/application.properties
+++ b/containers/edge/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 quarkus.banner.enabled = true
 quarkus.ssl.native = true
 
-quarkus.native.additional-build-args=-J-Djavax.net.ssl.trustStore=/tmp/quarkus.truststore,-J-Djavax.net.ssl.trustStorePassword=changeit
+quarkus.native.additional-build-args=-J-Djavax.net.ssl.trustStore=/tmp/quarkus.truststore,-J-Djavax.net.ssl.trustStorePassword=changeit,-H:IncludeResourceBundles=sun.util.resources.TimeZoneNames
 #
 # Camel
 #
