--- a/containers/edge/pom.xml
+++ b/containers/edge/pom.xml
@@ -7,8 +7,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
-		<camel.quarkus.version>1.1.0</camel.quarkus.version>
-		<quarkus.version>1.8.0.Final</quarkus.version>
+                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                <camel.quarkus.version>1.1.0</camel.quarkus.version>
+                <quarkus.version>1.8.0.Final</quarkus.version>
                 <maven.compiler.source>1.6</maven.compiler.source>
                 <maven.compiler.target>1.6</maven.compiler.target>
 	</properties>
